# fastapi-rag-chatbot

./: .gitignore  main.py  pyproject.toml
app/core/: config.py
app/rag/: engine.py
